<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andres.aoran.QuizActivity">

    <RelativeLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="167dp"
            android:layout_toStartOf="@+id/points"
            android:fontFamily="monospace"
            android:padding="16dp"
            android:text="@string/score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="monospace"
            android:padding="16dp"
            android:text="@string/_0"
            android:textSize="30sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/object"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background" />


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/luckiest_guy"
        android:textColor="@color/purple_700"
        android:padding="8dp"
        android:text="@string/bird"
        android:textAlignment="center"
        android:textSize="50sp" />

<!--    <Button-->
<!--        android:id="@+id/listenButton"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_gravity="center_vertical|center_horizontal"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="20sp"-->
<!--        android:onClick="playSound"-->
<!--        android:text="LISTEN"-->
<!--        />-->

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="A"
            android:textSize="50sp"
            android:id="@+id/trueButton"
            android:textColor="#fff"
            android:fontFamily="casual"
            android:background="#2196F3"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            tools:ignore="ButtonStyle,HardcodedText,UsingOnClickInXml" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="AN"
            android:textSize="50sp"
            android:id="@+id/falseButton"
            android:textColor="#fff"
            android:fontFamily="casual"
            android:background="#F44336"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>


</LinearLayout>
